<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ligo="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.gzligo.ebizzcardstranslator.common.ToolActionBar
        android:id="@+id/login_actionbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_10"
        ligo:txt_center_title="@string/login_actionbar" />

    <include layout="@layout/selector_country"/>

    <LinearLayout
        android:id="@+id/c_phone"
        android:layout_width="match_parent"
        android:layout_height="88px"
        android:background="@drawable/onclick_color_selector"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_district_num"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20px"
            android:layout_weight="5"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/login_district_num"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_size_16"/>

        <EditText
            android:id="@+id/tv_phone_num"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="61px"
            android:layout_weight="8"
            android:background="@null"
            android:digits="1234567890"
            android:textSize="@dimen/text_size_16"
            android:ellipsize="end"
            android:hint="@string/login_hint_phone"
            android:lines="1"
            android:paddingLeft="20px"
            android:singleLine="true"
            android:inputType="phone"/>

    </LinearLayout>

    <View
        android:id="@+id/v_slector_line"
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_height_01"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="20px"
        android:background="@color/line"/>

    <LinearLayout
        android:id="@+id/c_pwd_rl"
        android:layout_width="match_parent"
        android:layout_height="88px"
        android:background="@drawable/onclick_color_selector"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20px"
            android:layout_weight="5"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/login_pwd"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_size_16"/>

        <EditText
            android:id="@+id/tv_pwd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_weight="7.5"
            android:background="@null"
            android:ellipsize="end"
            android:hint="@string/login_pwd_hint"
            android:textSize="@dimen/text_size_16"
            android:lines="1"
            android:paddingLeft="20px"
            android:singleLine="true"
            android:inputType="textVisiblePassword"
            android:digits="0123456789abcdefghigklmnopqrstuvwxyzQWERTYUIOPASDFGHJKLZXCVBNM"/>

        <ImageView
            android:id="@+id/pwd_eye_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/login_eye_no"/>

    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="100px"
        android:layout_marginLeft="20px"
        android:layout_marginRight="20px"
        android:layout_marginTop="60px"
        android:background="@mipmap/green_btn_normal"
        android:text="@string/login_loging"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_18"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="88px"
        android:layout_marginTop="40px"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_register"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/onclick_color_selector"
            android:gravity="center"
            android:text="@string/login_register"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_size_16"/>

        <View
            android:layout_width="1px"
            android:layout_height="32px"
            android:layout_centerInParent="true"
            android:background="@color/line"/>

        <TextView
            android:id="@+id/txt_forget"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/onclick_color_selector"
            android:gravity="center"
            android:text="@string/login_forget"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_size_16"/>
    </LinearLayout>

</LinearLayout>