<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ligo="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.gzligo.ebizzcardstranslator.common.ToolActionBar
        android:id="@+id/register_actionbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ligo:txt_center_title= "@string/register_actionbar"
        ligo:show_back_icon="true">
    </com.gzligo.ebizzcardstranslator.common.ToolActionBar>

    <com.zhy.autolayout.AutoRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="120px"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/register_nickname"
            android:layout_marginLeft="20px"
            android:gravity="center"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_size_16"/>

        <EditText
            android:id="@+id/register_nickname_txt"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:hint="@string/register_nickname_demo"
            android:layout_marginLeft="300px"
            android:textSize="@dimen/text_size_16"
            android:background="@null"
            android:singleLine="true"
            android:lines="1"
            android:ellipsize = "end"/>

        <ImageView
            android:id="@+id/register_avatar_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/register_avatar_normal"
            android:layout_alignParentRight="true"
            android:layout_marginTop="20px"
            android:layout_marginRight="20px"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_height_01"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="20px"
            android:layout_toLeftOf="@id/register_avatar_iv"
            android:layout_marginRight="20px"
            android:background="@color/line"/>

    </com.zhy.autolayout.AutoRelativeLayout>

    <include layout="@layout/selector_country"/>

    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_height="88px"
        android:background="@drawable/onclick_color_selector"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/register_tv_district_num"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20px"
            android:layout_weight="5"
            android:text="@string/login_district_num"
            android:singleLine="true"
            android:ellipsize="end"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_size_16"/>

        <EditText
            android:id="@+id/register_tv_phone_num"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_weight="8"
            android:paddingLeft="20px"
            android:layout_marginRight="61px"
            android:hint="@string/register_phone_hint"
            android:textSize="@dimen/text_size_16"
            android:background="@null"
            android:singleLine="true"
            android:lines="1"
            android:ellipsize = "end"
            android:inputType="phone"/>

    </com.zhy.autolayout.AutoLinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_height_01"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="20px"
        android:background="@color/line"/>

    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_height="88px"
        android:background="@drawable/onclick_color_selector"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20px"
            android:layout_weight="5"
            android:text="@string/login_pwd"
            android:singleLine="true"
            android:ellipsize="end"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_size_16"/>

        <EditText
            android:id="@+id/register_tv_pwd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_weight="7.5"
            android:paddingLeft="20px"
            android:hint="@string/register_pwd_hint"
            android:textSize="@dimen/text_size_16"
            android:background="@null"
            android:singleLine="true"
            android:lines="1"
            android:ellipsize = "end"
            android:digits="0123456789abcdefghigklmnopqrstuvwxyzQWERTYUIOPASDFGHJKLZXCVBNM"/>

        <ImageView
            android:id="@+id/pwd_eye_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/login_eye_no"/>

    </com.zhy.autolayout.AutoLinearLayout>

    <Button
        android:id="@+id/register_btn"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="100px"
        android:layout_marginLeft="20px"
        android:layout_marginRight="20px"
        android:layout_marginTop="60px"
        android:background="@mipmap/green_btn_normal"
        android:text="@string/register_regist"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_18"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/register_protocol_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="40px"
            android:text="@string/register_protocol"
            android:textColor="@color/blue"/>

    </RelativeLayout>

</com.zhy.autolayout.AutoLinearLayout>